<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnCarniceria"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button_red"
        android:text="@string/carniceria"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCharcuteria"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button_green"
        android:text="@string/charcuteria"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnPescaderia"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button_blue"
        android:text="@string/pescaderia"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />
</LinearLayout>